--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "node": "^20.2.0",
