--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "migrateDb": "node src/migrateDb.js"
   },
   "repository": {
     "type": "git",
