Refine DB connection to render

--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,8 @@
 PORT=8000
 SESSION_SECRET=heruhathor
+
+PGHOST=dpg-ci661uunqql3q38ihjvg-a
+PGPORT=5432
+PGUSER=projectadmin
+PGPASSWORD=Y4M0LaKBqXFCLXwmdYvdn3NOI6jJxoEN
+PGDATABASE=fileserverdb_2s24
