--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
-    "migrateDb": "node src/migrateDb.js"
+    "knexfile": "node src/knexfile.js"
   },
   "repository": {
     "type": "git",
