--- a/src/.env
+++ b/src/.env
@@ -6,3 +6,4 @@ PGPORT=5432
 PGUSER=projectadmin
 PGPASSWORD=Y4M0LaKBqXFCLXwmdYvdn3NOI6jJxoEN
 PGDATABASE=fileserverdb_2s24
+PGDATABASE_URL=postgres://projectadmin:Y4M0LaKBqXFCLXwmdYvdn3NOI6jJxoEN@dpg-ci661uunqql3q38ihjvg-a/fileserverdb_2s24
