Db deolyment on render

--- a/src/.env
+++ b/src/.env
@@ -1,9 +1,9 @@
 PORT=8000
 SESSION_SECRET=heruhathor
 
-PGHOST=dpg-ci661uunqql3q38ihjvg-a
+PGHOST=dpg-ci661uunqql3q38ihjvg-a.oregon-postgres.render.com
 PGPORT=5432
 PGUSER=projectadmin
 PGPASSWORD=Y4M0LaKBqXFCLXwmdYvdn3NOI6jJxoEN
 PGDATABASE=fileserverdb_2s24
-PGDATABASE_URL=postgres://projectadmin:Y4M0LaKBqXFCLXwmdYvdn3NOI6jJxoEN@dpg-ci661uunqql3q38ihjvg-a/fileserverdb_2s24
+
